--- a/BankID.WebDemo/BankID.WebDemo.csproj
+++ b/BankID.WebDemo/BankID.WebDemo.csproj
@@ -135,7 +135,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AuthenticationModel.cs" />
+    <Compile Include="Models\AuthenticateModel.cs" />
+    <Compile Include="Models\PersonalNumberModel.cs" />
+    <Compile Include="Models\SignModel.cs" />
     <Compile Include="Models\StatusModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
